[package]
name = "dxfeed"
version = "0.2.3"
edition = "2021"
description = "Ergonomic serializable rust-wrappers around libdxfeed-sys"
license = "MIT"
repository = "https://github.com/spotgamma/dxfeed-rust-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
widestring = "1.0.2"
libdxfeed-sys = { version = "0.2.1", features = ["serde"] }

strum_macros = "0.24.3"
strum = { version = "0.24.1", features = ["derive"] }
