[package]
name = "quote_sub_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossbeam-channel = "0.5.7"
dxfeed = "0.1.11"
serde = "1.0.159"
serde_json = "1.0.95"
signal-hook = "0.3.15"
widestring = "1.0.2"
